--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="0dp">
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/item_icon"
@@ -12,20 +12,20 @@
         android:adjustViewBounds="true"
         android:maxWidth="80dp"
         android:maxHeight="80dp"
+        android:minWidth="80dp"
+        android:minHeight="80dp"
         app:srcCompat="@drawable/dodo" />
 
     <TextView
         android:id="@+id/item_txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_toEndOf="@+id/item_icon"
-        android:layout_toRightOf="@+id/item_icon"
         android:text="Name"
         android:textSize="18sp" />
 
@@ -34,10 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_txtName"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_toEndOf="@+id/item_icon"
-        android:layout_toRightOf="@+id/item_icon"
+        android:layout_alignStart="@+id/item_txtName"
+        android:layout_alignLeft="@+id/item_txtName"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:text="Mass (kg):" />
 
     <TextView
@@ -45,10 +45,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_txtMass"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_toEndOf="@+id/item_icon"
-        android:layout_toRightOf="@+id/item_icon"
+        android:layout_alignStart="@+id/item_txtName"
+        android:layout_alignLeft="@+id/item_txtName"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:text="Details:" />
 </RelativeLayout>
