Added temporary toolbar to DodoListActivity. Added clickedDodo to DodoWaddle

--- a/app/src/main/res/layout/activity_dodo_list.xml
+++ b/app/src/main/res/layout/activity_dodo_list.xml
@@ -38,4 +38,16 @@
         app:layout_constraintVertical_bias="1.0">
 
     </ListView>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarDodoList"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
