--- a/app/src/main/res/layout/activity_dodo_list.xml
+++ b/app/src/main/res/layout/activity_dodo_list.xml
@@ -12,9 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Dodos on Mauritius Island"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:text="Please select a dodo."
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/dodoListView"
         app:layout_constraintTop_toBottomOf="@+id/toolbarDodoList" />
 
