Added initial Add Activity.

--- a/app/src/main/res/layout/activity_dodo_list.xml
+++ b/app/src/main/res/layout/activity_dodo_list.xml
@@ -41,7 +41,7 @@
         android:id="@+id/toolbarDodoList"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="#009688"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
