--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -6,36 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".DeleteActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarDelete"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#009688"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Please pick a dodo to delete."
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarDelete" />
-
-    <ListView
-        android:id="@+id/listviewDelete"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDelete" />
+    <include layout="@layout/activity_dodo_list"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
