Implemented Edit2Activity.

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,30 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".AddActivity">
 
-
-    <TextView
-        android:id="@+id/add_txtMass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Mass [kg]"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtfillName" />
-
-    <TextView
-        android:id="@+id/add_txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Name of dodo"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" />
-
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarAdd"
         android:layout_width="0dp"
@@ -41,6 +17,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/add_txtMass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/mass_kg"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/add_txtName"
+        app:layout_constraintTop_toBottomOf="@+id/add_txtfillName" />
+
+    <TextView
+        android:id="@+id/add_txtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/name_of_dodo"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" />
+
     <EditText
         android:id="@+id/add_txtfillName"
         android:layout_width="0dp"
@@ -48,7 +46,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:hint="Ex: John Dodo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/add_txtName"
@@ -59,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Details (optional)"
+        android:text="@string/details_optional"
         app:layout_constraintStart_toStartOf="@+id/add_txtName"
         app:layout_constraintTop_toBottomOf="@+id/add_txtfillMass" />
 
@@ -68,7 +65,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Ex: I love cheeseburgers."
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/add_txtfillName"
         app:layout_constraintStart_toStartOf="@+id/add_txtName"
@@ -79,7 +75,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="CREATE"
         app:layout_constraintEnd_toEndOf="@+id/add_txtfillDetails"
         app:layout_constraintStart_toStartOf="@+id/add_txtfillDetails"
         app:layout_constraintTop_toBottomOf="@+id/add_txtfillDetails" />
@@ -89,7 +84,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="ex: 10.0 for 10.0 kg"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="@+id/add_txtfillName"
         app:layout_constraintStart_toStartOf="@+id/add_txtName"
