Implemented input page of calculator: HuntInputActivity, and refactored a few things.

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,87 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".AddActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarAdd"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#009688"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/add_txtMass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/mass_kg"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtfillName" />
-
-    <TextView
-        android:id="@+id/add_txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/name_of_dodo"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" />
-
-    <EditText
-        android:id="@+id/add_txtfillName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtName" />
-
-    <TextView
-        android:id="@+id/add_txtDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/details_optional"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtfillMass" />
-
-    <EditText
-        android:id="@+id/add_txtfillDetails"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/add_txtfillName"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtDetails" />
-
-    <Button
-        android:id="@+id/add_btnCreate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/add_txtfillDetails"
-        app:layout_constraintStart_toStartOf="@+id/add_txtfillDetails"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtfillDetails" />
-
-    <EditText
-        android:id="@+id/add_txtfillMass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="@+id/add_txtfillName"
-        app:layout_constraintStart_toStartOf="@+id/add_txtName"
-        app:layout_constraintTop_toBottomOf="@+id/add_txtMass" />
+    <include layout="@layout/activity_input"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
