Implemented calculator (dodo hunt results). Currently results shown as a toast message in HuntInputActivity, but I will move to its own results activity next.

--- a/app/src/main/res/layout/activity_hunt_input.xml
+++ b/app/src/main/res/layout/activity_hunt_input.xml
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="1 (almost dead), 10 (Marvel superhero)"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/hunt_txtfill1"
         app:layout_constraintStart_toStartOf="@+id/hunt_txt1"
         app:layout_constraintTop_toBottomOf="@+id/hunt_txt3" />
