Set up the initial About page (calculations/mathy and about app info). Left "Learn More" title

--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".LearnActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarLearn"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/customToolbarColor"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -37,6 +48,19 @@
                 android:text="@string/learn_strQuote"
                 android:textSize="18sp"
                 android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/learn_txtQuoteCite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="0dp"
+                android:text="@string/learn_strQuoteCite"
+                android:textSize="18sp"
+                android:gravity="right" />
 
             <TextView
                 android:id="@+id/learn_txtIntroTitle"
@@ -163,23 +187,43 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/learn_txtEndSpace"
+                android:id="@+id/learn_txtEndSpace1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="\n\n\n\n\n\n" />
+
+            <TextView
+                android:id="@+id/learn_txtRefTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="0dp"
+                android:text="@string/references"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/learn_txtRefBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="0dp"
+                android:text="@string/learn_strRef"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/learn_txtEndSpace2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="\n\n\n\n\n\n" />
 
         </LinearLayout>
     </ScrollView>
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarLearn"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/customToolbarColor"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
