Changed start page button to have a dodo picture. Added other drawable options.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,14 @@
     android:layout_gravity="center"
     tools:context=".MainActivity">
 
-    <Button
+    <ImageView
         android:id="@+id/btnStart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/dodo"
-        android:textAllCaps="true"
-        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dodo_aves_shadow" />
 </androidx.constraintlayout.widget.ConstraintLayout>
