--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -25,8 +25,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:text="Name"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -56,5 +55,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
-        android:text="Details:" />
+        android:gravity="center_vertical"
+        android:text="Details:"
+        android:textSize="12sp" />
 </RelativeLayout>
