--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -14,18 +14,21 @@
         android:maxHeight="80dp"
         android:minWidth="80dp"
         android:minHeight="80dp"
+        android:scaleType="fitXY"
+        android:scaleX="1"
+        android:scaleY="1"
         app:srcCompat="@drawable/dodo" />
 
     <TextView
         android:id="@+id/item_txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
+        android:layout_toEndOf="@+id/item_icon"
+        android:layout_toRightOf="@+id/item_icon"
         android:text="Name"
         android:textSize="14sp"
         android:textStyle="bold" />
