--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -6,17 +6,12 @@
 
     <ImageView
         android:id="@+id/item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:width="80dp"
+        android:height="80dp"
         android:adjustViewBounds="true"
-        android:maxWidth="80dp"
-        android:maxHeight="80dp"
-        android:minWidth="80dp"
-        android:minHeight="80dp"
         android:scaleType="fitXY"
-        android:scaleX="1"
-        android:scaleY="1"
         app:srcCompat="@drawable/dodo" />
 
     <TextView
